@@ -19,8 +19,9 @@ import sys, os
 # add these directories to sys.path here. If the directory is relative to the
 # documentation root, use os.path.abspath to make it absolute, like shown here.
 #sys.path.insert(0, os.path.abspath('.'))
-sys.path.insert(0, os.path.abspath('../..'))
+sys.path.insert(0, os.path.abspath('../../scripts'))
 sys.path.insert(0, os.path.abspath('../../aabooks/ajbbook'))
+sys.path.insert(0, os.path.abspath('../../aabooks/lib'))
 
 # -- General configuration -----------------------------------------------------
 
